--- a/01.md
+++ b/01.md
@@ -3,7 +3,8 @@
 
 ```java
 public class Solution {
-	public static boolean Find(int target, int [][] array) {		         for(int i=0;i<array.length;i++){
+	public static boolean Find(int target, int [][] array) {
+		for(int i=0;i<array.length;i++){
 			for(int j=0;j<array[i].length;j++){
 				if(target==array[i][j]){
 					return true;
