--- a/02替换空格.md
+++ b/02替换空格.md
@@ -22,3 +22,47 @@ public class Solution {
 	}
 }
 ```
+
+#### String与StringBuffer之间的转换
+```java
+package demo;
+/* String -> StringBuffer
+ * 方式一：构造方法
+ * 方式二：通过append方法
+
+ * StringBuffer -> String
+ * 方式一：通过构造方法
+ * 方式二：通过toString方法
+ * */
+public class StringAndStringBufferSwitch {
+    public static void main(String[] args) {
+        //String -> StringBuffer
+        //创建一个String对象
+        String str = "Hello Java!";
+        System.out.println(str);
+
+        //方式一：构造方法
+        StringBuffer buffer = new StringBuffer(str);
+        System.out.println(buffer);
+ 
+        //方式二：通过append方法
+        StringBuffer buffer2 = new StringBuffer();
+        buffer2.append(str);
+        System.out.println(buffer2);
+ 
+        //StringBuffer -> String
+        //创建一个StringBuffer对象
+        StringBuffer buffer3 = new StringBuffer();
+        buffer3.append("Hello World!");
+        System.out.println(buffer3);
+ 
+        //方式一：通过构造方法
+        String str2 = new String(buffer3); 
+        System.out.println(str2);
+         
+        //方式二：通过toString方法
+        String str3 = buffer3.toString();
+        System.out.println(str3);
+    }
+}
+```
